Prometheus, Grafana, Kafka Topics

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,4 @@ spring.application.name=spring
 spring.devtools.add-properties=true
 logging.level.br.com.samueltorga=TRACE
 spring.jpa.show-sql=true
+spring.kafka.bootstrap-servers=localhost:8097,localhost:8098,localhost:8099
