--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=spring
 spring.devtools.add-properties=false
+spring.threads.virtual.enabled=true
+
+management.endpoints.web.exposure.include=*
